--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "sweetalert2": "^11.17.2",
@@ -27,6 +28,7 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^9.20.1",
     "eslint-plugin-vue": "^9.32.0",
+    "gh-pages": "^6.3.0",
     "jiti": "^2.4.2",
     "npm-run-all2": "^7.0.2",
     "postcss": "^8.5.3",
